# Sokoban

./: .gitignore  LICENSE.md  README.md  Sokoban.cabal  TODO.md  install.sh
.svn/: wc.db
Recursos/: mapa3.txt
assets/tests/T1/: coordenadasNegativas.in  diferentesComprimentos.in  multiplosErros.in  nroDeCoordenadas.in  nroDeCoords.in
assets/tests/T2/: customMap.in  customMapII.out  customMapIII.out  semCardinaisRedundantes.in  semCardinaisRedundantes.out
assets/tests/T3/: defaultTest.in  duasCaixas.in  firstTeste.in
assets/tests/T4/: mapaSokobanF.in  mapaSokobanF.out  moveInvalidoMpCompleto.in  moveInvalidoMpCompleto.out  testeMooshak.in
doc/html_T1/: doc-index.html  index.html
doc/html_T2/: doc-index.html  mini_Main.html
doc/html_T3/: Main.html  doc-index.html  mini_Main.html
doc/html_T4/: Main.html  doc-index.html  mini_Main.html
doc/html_T5/: Main.html  doc-index.html  mini_Main.html
doc/html_T6/: Main.html  doc-index.html  mini_Main.html
src/: tarefa2.hs  tarefa6  tarefa6.hi
src/main/: main.hs
tests/T1/: coordsInvalidas.in
tests/T2/: caixaPosFinal.in  mapaDefault.out
tests/T4/: mapaSimples.in  movimentoInvalido.in  movimentoInvalido.out  testeQuatro.in  testeQuatro.out
tex/: Relatorio.aux  Relatorio.tex  Relatorio.toc  report.tex
