name:                Sokoban
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MQuaresma/Sokoban#readme
license:             MIT
license-file:        LICENSE
author:              Miguel Miranda Quaresma
maintainer:          miguelquaresma97@gmail.com
copyright:           2018 Miguel Miranda Quaresma
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Sokoban
  hs-source-dirs:      src/main
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       directory, gloss, text, base >= 4.7 && < 5
